gatekeeper/privilege-escalation/escalate-pod-denied.yaml
apiVersion: v1
kind: Pod
metadata:
  name: escalate-pod-denied
  namespace: test
spec:
  containers:
  - name: escalate-container
    image: gcr.io/google-samples/node-hello:1.0
    securityContext:
      allowPrivilegeEscalation: true
      readOnlyRootFilesystem: true
      capabilities:
        drop:
          - all
