gatekeeper/privilege-escalation/non-escalate-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: non-escalate-pod
  namespace: test
spec:
  containers:
  - name: non-escalate-container
    image: gcr.io/google-samples/node-hello:1.0
    securityContext:
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
      capabilities:
        drop:
          - all
