gatekeeper/privilege-escalation/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowPrivilegeEscalationContainer
metadata:
  name: psp-allow-privilege-escalation-container
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    exemptImages: []
    excludedPods:
      - "escalate-pod-allowed"
      - "kube-system;coredns-64897985d-" # doesn't deny privilege escalation by default
      - "kube-system;etcd-minikube" # doesn't deny privilege escalation by default
      - "kube-system;kube-apiserver-minikube" # doesn't deny privilege escalation by default
      - "kube-system;kube-controller-manager-minikube" # doesn't deny privilege escalation by default
      - "kube-system;kube-proxy-" # doesn't deny privilege escalation by default
      - "kube-system;kube-scheduler-minikube" # doesn't deny privilege escalation by default
      - "kube-system;storage-provisioner" # doesn't deny privilege escalation by default
